// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderers trên fixture 19 màn > mọi hình: mở/đóng đúng, không dấu tiếng Việt, ổn định giữa hai lần gọi (snapshot) > context 1`] = `
"@startuml
skinparam monochrome true
skinparam shadowing false
skinparam nodesep 45
skinparam ranksep 110
skinparam usecaseFontSize 16
usecase "\\n\\n   FlintFlow   \\n\\n" as SYSTEM_
rectangle "Founder" as A01
rectangle "Business Analyst" as A02
rectangle "Administrator" as A03
rectangle "Guest" as A04
rectangle "Payment Gateway" as A05
rectangle "LLM Provider" as A06
rectangle "PlantUML Server" as A07
rectangle "Email Service" as A08
rectangle "Scheduler" as A09
A01 <-right-> SYSTEM_ : → brief answers, accepted step\\n← draft section, srs document
A02 <-left-> SYSTEM_ : ← verification result\\n→ red flag list
A03 <-down-> SYSTEM_ : ↓ account action\\n↑ platform metrics
A04 -up-> SYSTEM_ : registration request
A05 <-down-> SYSTEM_ : ↓ payment result\\n↑ payment request
A06 <-up-> SYSTEM_ : ↑ generated draft\\n↓ draft request
A07 <-down-> SYSTEM_ : ↓ diagram png\\n↑ puml source
SYSTEM_ -down-> A08 : email request
A09 -down-> SYSTEM_ : housekeeping tick
@enduml
"
`;

exports[`renderers trên fixture 19 màn > mọi hình: mở/đóng đúng, không dấu tiếng Việt, ổn định giữa hai lần gọi (snapshot) > erd 1`] = `
"@startuml
skinparam monochrome true
hide circle
hide empty members
entity "User" as E01
entity "Project" as E02
entity "Spine" as E03
entity "ChatSession" as E04
entity "CreditLedger" as E05
entity "Subscription" as E06
entity "Notification" as E07
entity "Baseline" as E08
entity "ChangeRecord" as E09
entity "UsageRecord" as E10
entity "Flag" as E11
entity "Diagram" as E12
E01 ||--o{ E02
E01 ||--o{ E05
E01 ||--o{ E07
E02 ||--o{ E03
E02 ||--o{ E04
E03 ||--o{ E08
E03 ||--o{ E09
E03 ||--o{ E11
E03 ||--o{ E12
E05 ||--o{ E10
E06 ||--o{ E01
@enduml
"
`;

exports[`renderers trên fixture 19 màn > mọi hình: mở/đóng đúng, không dấu tiếng Việt, ổn định giữa hai lần gọi (snapshot) > screen_flow part 1 1`] = `
"@startdot
digraph screens_flow {
  graph [fontname="DejaVu Sans", fontsize=13, labelloc=t, compound=true, nodesep=0.4, ranksep=0.5];
  node [fontname="DejaVu Sans", fontsize=11, shape=box, color="#000000"];
  edge [arrowsize=0.8];
  label="Screens flow for Founder";
  START [label="Founder", shape=diamond, style=solid];
  S01 [label="Login"];
  S03 [label="Forgot Password", shape=ellipse];
  S04 [label="Onboarding"];
  S05 [label="Project Dashboard"];
  S06 [label="Create Project", shape=ellipse];
  subgraph cluster_S07 {
    label="Project Workspace"; style=solid;
    S07_T1 [label="Chat"];
    S07_T2 [label="Document"];
    S07_T3 [label="History"];
  }
  S08 [label="Diagram Preview"];
  S09 [label="Verification & Change Panel"];
  S10 [label="Export"];
  S11 [label="Plan & Pricing"];
  S12 [label="Billing History"];
  S13 [label="Notification Center"];
  START -> S01;
  START -> S04;
  S01 -> S03;
  S01 -> S05;
  S04 -> S05;
  S05 -> S06;
  S05 -> S07_T1 [lhead=cluster_S07];
  S05 -> S11;
  S05 -> S13;
  S06 -> S07_T1 [lhead=cluster_S07];
  S07_T1 -> S08 [ltail=cluster_S07];
  S07_T1 -> S09 [ltail=cluster_S07];
  S07_T1 -> S10 [ltail=cluster_S07];
  S09 -> S10;
  S11 -> S12;
}
@enddot
"
`;

exports[`renderers trên fixture 19 màn > mọi hình: mở/đóng đúng, không dấu tiếng Việt, ổn định giữa hai lần gọi (snapshot) > screen_flow part 2 1`] = `
"@startdot
digraph screens_flow {
  graph [fontname="DejaVu Sans", fontsize=13, labelloc=t, compound=true, nodesep=0.4, ranksep=0.5];
  node [fontname="DejaVu Sans", fontsize=11, shape=box, color="#000000"];
  edge [arrowsize=0.8];
  label="Screens flow for Business Analyst";
  START [label="Business Analyst", shape=diamond, style=solid];
  S01 [label="Login"];
  S04 [label="Onboarding"];
  S05 [label="Project Dashboard"];
  subgraph cluster_S07 {
    label="Project Workspace"; style=solid;
    S07_T1 [label="Chat"];
    S07_T2 [label="Document"];
    S07_T3 [label="History"];
  }
  S08 [label="Diagram Preview"];
  S09 [label="Verification & Change Panel"];
  S10 [label="Export"];
  S13 [label="Notification Center"];
  START -> S01;
  START -> S04;
  S01 -> S05;
  S04 -> S05;
  S05 -> S07_T1 [lhead=cluster_S07];
  S05 -> S13;
  S07_T1 -> S08 [ltail=cluster_S07];
  S07_T1 -> S09 [ltail=cluster_S07];
  S07_T1 -> S10 [ltail=cluster_S07];
  S09 -> S10;
}
@enddot
"
`;

exports[`renderers trên fixture 19 màn > mọi hình: mở/đóng đúng, không dấu tiếng Việt, ổn định giữa hai lần gọi (snapshot) > screen_flow part 3 1`] = `
"@startdot
digraph screens_flow {
  graph [fontname="DejaVu Sans", fontsize=13, labelloc=t, compound=true, nodesep=0.4, ranksep=0.5];
  node [fontname="DejaVu Sans", fontsize=11, shape=box, color="#000000"];
  edge [arrowsize=0.8];
  label="Screens flow for Administrator";
  START [label="Administrator", shape=diamond, style=solid];
  S01 [label="Login"];
  S14 [label="Admin User List"];
  S15 [label="Admin User Detail"];
  S16 [label="Admin Metrics Dashboard"];
  S17 [label="Admin AI Cost Report"];
  S18 [label="Admin Prompt Templates"];
  S19 [label="Admin Audit Log"];
  START -> S01;
  S01 -> S14;
  S14 -> S15;
  S14 -> S16;
  S14 -> S17;
  S14 -> S18;
  S14 -> S19;
}
@enddot
"
`;

exports[`renderers trên fixture 19 màn > mọi hình: mở/đóng đúng, không dấu tiếng Việt, ổn định giữa hai lần gọi (snapshot) > screen_flow part 4 1`] = `
"@startdot
digraph screens_flow {
  graph [fontname="DejaVu Sans", fontsize=13, labelloc=t, compound=true, nodesep=0.4, ranksep=0.5];
  node [fontname="DejaVu Sans", fontsize=11, shape=box, color="#000000"];
  edge [arrowsize=0.8];
  label="Screens flow for Guest";
  START [label="Guest", shape=diamond, style=solid];
  S01 [label="Login"];
  S02 [label="Register"];
  S03 [label="Forgot Password", shape=ellipse];
  START -> S01;
  S01 -> S02;
  S01 -> S03;
}
@enddot
"
`;

exports[`renderers trên fixture 19 màn > mọi hình: mở/đóng đúng, không dấu tiếng Việt, ổn định giữa hai lần gọi (snapshot) > screen_layout@S01 1`] = `
"@startsalt
{+
  <b>Login
  {#
    <b>Function | <b>Description
    Submit Credentials | Authenticates the user with email and password and issues an access token.
    Log In with Google | Authenticates via Google OAuth and links or creates the local account.
    Toggle Password Visibility | Switches the password input between masked and plain text.
    Navigate to Register | Navigates to the registration screen.
    Open Forgot Password | Opens the Forgot Password popup over the login form.
  }
}
@endsalt
"
`;

exports[`renderers trên fixture 19 màn > mọi hình: mở/đóng đúng, không dấu tiếng Việt, ổn định giữa hai lần gọi (snapshot) > screen_layout@S05 1`] = `
"@startsalt
{+
  <b>Project Dashboard
  {#
    <b>Function | <b>Description
    List Projects | Shows the user's projects with name, status, readiness score and last activity.
    Search Projects | Filters the project cards by name substring.
    Filter by Status | Restricts the list to active or archived projects.
    Open Project | Opens the Project Workspace and resumes at the stored pipeline position.
    Archive Project | Archives the project after confirmation; archived projects stay readable.
    Open Create Project | Opens the Create Project popup.
  }
}
@endsalt
"
`;

exports[`renderers trên fixture 19 màn > mọi hình: mở/đóng đúng, không dấu tiếng Việt, ổn định giữa hai lần gọi (snapshot) > screen_layout@S07 1`] = `
"@startsalt
{+
  <b>Project Workspace
  {#
    <b>Function | <b>Description
    Send Chat Message | Sends the user turn to the pipeline orchestrator for the current step.
    Stream AI Response | Streams the model response into the chat pane over SSE with a cancel control.
    Switch Tab | Switches between Chat, Document and History without losing pane state.
    Render Document Pane | Renders the assembled SRS read-only with status badges per section.
    Accept Step at Gate | Accepts the current step's output, commits its transaction and advances the pipeline.
    Request Revision at Gate | Sends the user's revision notes back to the step within the turn ceiling.
  }
}
@endsalt
"
`;

exports[`renderers trên fixture 19 màn > mọi hình: mở/đóng đúng, không dấu tiếng Việt, ổn định giữa hai lần gọi (snapshot) > screen_layout@S09 1`] = `
"@startsalt
{+
  <b>Verification & Change Panel
  {#
    <b>Function | <b>Description
    List Open Flags | Shows open red and yellow flags with rule, target and remediation step.
    Waive Flag | Waives an eligible red flag with a mandatory typed reason.
    Submit Change Request | Turns a natural-language change request into a previewable op batch.
    Preview Impact Diff | Shows a field-level before/after diff and the dependent sections that become stale.
    Apply Change Transaction | Applies the whole op batch atomically and records the change history.
  }
}
@endsalt
"
`;

exports[`renderers trên fixture 19 màn > mọi hình: mở/đóng đúng, không dấu tiếng Việt, ổn định giữa hai lần gọi (snapshot) > screen_layout@S10 1`] = `
"@startsalt
{+
  <b>Export
  {#
    <b>Function | <b>Description
    Configure Export Options | Chooses between working draft and baseline export and shows blockers.
    Export Working Draft | Renders the current document to Word with a DRAFT watermark on every page.
    Export Baseline Document | Renders the clean document from the baseline snapshot, not from the current Spine.
    Show Export Blockers | Explains which precondition fails and links the shortcut to fix it.
    Download Exported File | Streams the generated .docx to the browser with a versioned file name.
  }
}
@endsalt
"
`;

exports[`renderers trên fixture 19 màn > mọi hình: mở/đóng đúng, không dấu tiếng Việt, ổn định giữa hai lần gọi (snapshot) > usecase part 1 1`] = `
"@startuml
skinparam monochrome true
left to right direction
title Use Cases — Founder
actor "Founder" as A01
actor "Business Analyst" as A02
actor "Administrator" as A03
actor "Guest" as A04
rectangle "FlintFlow" {
  usecase "Log In" as UC02
  usecase "Reset Password" as UC03
  usecase "Complete Onboarding" as UC04
  usecase "Create Project" as UC06
  usecase "Browse Projects" as UC05
  usecase "Resume Project" as UC07
  usecase "Refine Product Brief" as UC08
  usecase "Generate SRS Content" as UC09
  usecase "Accept Step At Gate" as UC10
  usecase "Render Diagrams" as UC12
  usecase "Request Change" as UC11
  usecase "Preview Change Impact" as UC23
  usecase "Verify Document" as UC13
  usecase "Waive Red Flag" as UC14
  usecase "Sign Baseline" as UC15
  usecase "Export Word Document" as UC16
  usecase "Purchase Credits" as UC17
  usecase "View Billing History" as UC18
  usecase "Receive Notifications" as UC19
  usecase "Archive Project" as UC24
}
actor "Payment Gateway" as A05 <<system>>
actor "LLM Provider" as A06 <<system>>
actor "PlantUML Server" as A07 <<system>>
actor "Email Service" as A08 <<system>>
A01 -- UC02
A02 -- UC02
A03 -- UC02
A04 -- UC02
A01 -- UC03
UC03 -- A08
A01 -- UC06
A01 -- UC05
A01 -- UC07
A01 -- UC08
UC08 -- A06
A01 -- UC09
UC09 -- A06
UC12 -- A07
A01 -- UC11
A02 -- UC15
A01 -- UC16
A01 -- UC17
UC17 -- A05
A01 -- UC18
A01 -- UC19
A01 -- UC24
UC04 ..> UC06 : <<extend>>
UC09 ..> UC10 : <<include>>
UC09 ..> UC12 : <<include>>
UC11 ..> UC23 : <<include>>
UC14 ..> UC15 : <<extend>>
UC15 ..> UC13 : <<include>>
@enduml
"
`;

exports[`renderers trên fixture 19 màn > mọi hình: mở/đóng đúng, không dấu tiếng Việt, ổn định giữa hai lần gọi (snapshot) > usecase part 2 1`] = `
"@startuml
skinparam monochrome true
left to right direction
title Use Cases — Administrator / Guest / Scheduler
actor "Administrator" as A03
actor "Guest" as A04
rectangle "FlintFlow" {
  usecase "Inspect Platform Accounts" as UC20
  usecase "Monitor Platform Metrics" as UC21
  usecase "Register Account" as UC01
  usecase "Run Scheduled Housekeeping" as UC22
}
actor "Email Service" as A08 <<system>>
actor "Scheduler" as A09 <<time>>
A03 -- UC20
A03 -- UC21
A04 -- UC01
UC01 -- A08
UC22 -- A09
@enduml
"
`;
